--- a/adm_empreendedorismo/01_adm/01/index.html
+++ b/adm_empreendedorismo/01_adm/01/index.html
@@ -93,6 +93,21 @@
                     <li>A Apple Inc. é uma pessoa jurídica, porque é uma empresa registrada com um CNPJ, com responsabilidade e estrutura própria para realizar atividades econômicas e responder por suas obrigações legais.</li>
                 </ul>
             </li>
+            <br>
+            <li><strong>Dinâmica! Instruções:</strong>
+                <ul>
+                    <li>Divida os participantes em pequenos grupos de 3 a 5 pessoas.</li>
+                    <li>Cada grupo terá 10 minutos para discutir e listar exemplos de pessoas físicas e jurídicas, baseados no que foi apresentado.</li>
+                    <li>Depois, cada grupo deverá compartilhar um exemplo para cada categoria (Pessoa Física e Pessoa Jurídica) com o restante dos participantes.</li>
+                    <li>Após as apresentações, o facilitador pode corrigir ou expandir os exemplos dados pelos grupos, acrescentando detalhes sobre as características legais e fiscais de cada tipo.</li>
+                </ul>
+            </li>
+            <li><strong>Objetivo:</strong>
+                <ul>
+                    <li>Estimular a compreensão prática sobre as diferenças entre pessoa física e pessoa jurídica.</li>
+                    <li>Desenvolver habilidades de trabalho em grupo e comunicação.</li>
+                </ul>
+            </li>
         </ul>
     </section>
 
