--- a/adm_empreendedorismo/02_empreendedorismo/10/index.html
+++ b/adm_empreendedorismo/02_empreendedorismo/10/index.html
@@ -1,140 +1,130 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronograma - Empreendedorismo e Planejamento</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
+
 <body class="body">
     <header class="header">
         <div class="header-content">
-            <h1 class="title">Cronograma: Empreendedorismo e Planejamento</h1>
-            <p class="subtitle">Aprofunde seus conhecimentos sobre empreendedorismo e como criar um planejamento estratégico para o sucesso.</p>
+            <h1 class="title">Revisão: Módulo de Empreendedorismo</h1>
+            <p class="subtitle">É hora de revisar todo o conteúdo que vimos ao longo das últimas aulas, através de um
+                quiz.</p>
         </div>
     </header>
 
     <section class="section">
-        <h2 class="time-slot">0:00 - 0:15 | O que é Empreender</h2>
+        <h2 class="time-slot">Conteúdo da Revisão</h2>
         <ul class="list">
-            <li><strong>Ser Empreendedor:</strong>
+            <li><strong>Tópicos abordados em aula:</strong>
                 <ul>
-                    <li>Empreender é identificar oportunidades, tomar riscos calculados e criar algo inovador que gere valor.</li>
-                    <li>O empreendedor é alguém que busca resolver problemas e criar soluções que atendem a uma necessidade no mercado.</li>
-                </ul>
-            </li>
-            <li><strong>Não ser Empreendedor:</strong>
-                <ul>
-                    <li>Quando uma pessoa busca estabilidade, evita riscos e prefere a segurança de um emprego tradicional, não se considera um empreendedor.</li>
-                    <li>Focar apenas em um trabalho sem buscar inovar ou melhorar constantemente é o oposto de ser empreendedor.</li>
-                </ul>
+                    <li><strong><em>Aula 01</em></strong>:
+                        <ul>
+                            <li>O que é Empreender</li>
+                            <li>Ser Empreendedor</li>
+                            <li>Não ser Empreendedor</li>
+                        </ul>
+                    </li>
+                    <li><strong><em>Aula 02</em></strong>:
+                        <ul>
+                            <li>Empreendedores de Sucesso</li>
+                            <li>Como Desenvolver as suas Características Empreendedoras</li>
+                            <li>Perfil de um Empreendedor</li>
+                            <li>Estudos de Casos</li>
+                        </ul>
+                    </li>
+                    <li><strong><em>Aula 03</em></strong>:
+                        <ul>
+                            <li>Importância do Empreendedorismo</li>
+                            <li>As Tendências do Empreendedorismo</li>
+                            <li>Networking</li>
+                        </ul>
+                    </li>
+                    <li><strong><em>Aula 04</em></strong>:
+                        <ul>
+                            <li>Importância do fracasso</li>
+                            <li>Estudo de Caso</li>
+                            <li><strong><em>O Modelo de Negócios</em></strong>:
+                                <ul>
+                                    <li>Stakeholders</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><strong><em>Aula 05</em></strong>:
+                        <ul>
+                            <li>Lojas Virtuais</li>
+                            <li>Startups</li>
+                            <li><strong><em>A Empresa</em></strong>:
+                                <ul>
+                                    <li>Como Abrir</li>
+                                    <li>Direitos</li>
+                                    <li>Obrigações</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><strong><em>Aula 06</em></strong>:
+                        <ul>
+                            <li>Marca</li>
+                            <li>Franquias</li>
+                            <li>Patente</li>
+                            <li>Registro de Patente</li>
+                        </ul>
+                    </li>
+                    <li><strong><em>Aula 07</em></strong>:
+                        <ul>
+                            <li><strong><em>Planejamento Estratégico</em></strong>:
+                                <ul>
+                                    <li><strong><em>Cenário Econômico</em></strong>:
+                                        <ul>
+                                            <li>Produto Interno Bruto (PIB)</li>
+                                            <li>Inflação</li>
+                                            <li>Desemprego</li>
+                                        </ul>
+                                    </li>
+                                    <li>Taxa de Juros</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><strong><em>Aula 08</em></strong>:
+                        <ul>
+                            <li>Matriz Swot</li>
+                            <li>Matriz BCG</li>
+                            <li>Estudo de Caso</li>
+                        </ul>
+                    </li>
+                    <li><strong><em>Aula 09</em></strong>:
+                        <ul>
+                            <li><strong><em>Produção</em></strong>:
+                                <ul>
+                                    <li>Eliminação dos Desperdícios</li>
+                                </ul>
+                            </li>
+                            <li>Qualidade</li>
+                        </ul>
+                    </li>
+                </ul>                
             </li>
         </ul>
     </section>
 
     <section class="section">
-        <h2 class="time-slot">0:15 - 0:30 | Empreendedores de Sucesso</h2>
+        <h2 class="time-slot">Plataforma Quizizz</h2>
         <ul class="list">
-            <li><strong>Exemplos de Empreendedores de Sucesso:</strong>
+            <li><strong>Acesse o link:</strong>
                 <ul>
-                    <li>Steve Jobs, Elon Musk e Oprah Winfrey são exemplos de empreendedores que criaram empresas inovadoras que transformaram mercados.</li>
-                    <li>Esses empreendedores compartilharam características como visão, persistência, e a capacidade de aprender com os fracassos.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section class="section">
-        <h2 class="time-slot">0:30 - 0:45 | Como Desenvolver as Suas Características Empreendedoras</h2>
-        <ul class="list">
-            <li><strong>Autoconhecimento e Educação Contínua:</strong>
-                <ul>
-                    <li>Identifique suas forças e fraquezas. Invista em cursos, workshops e leituras sobre inovação e liderança.</li>
-                    <li>Fazer parte de uma rede de mentores e colegas empreendedores também ajuda no crescimento pessoal e profissional.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section class="section">
-        <h2 class="time-slot">0:45 - 1:00 | Perfil de um Empreendedor</h2>
-        <ul class="list">
-            <li><strong>Características do Perfil Empreendedor:</strong>
-                <ul>
-                    <li>Proatividade: busca constante por novas oportunidades e soluções.</li>
-                    <li>Resiliência: habilidade para lidar com fracassos e obstáculos.</li>
-                    <li>Capacidade de liderança e comunicação clara com a equipe.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section class="section">
-        <h2 class="time-slot">1:00 - 1:15 | Importância do Empreendedorismo e Tendências</h2>
-        <ul class="list">
-            <li><strong>Importância do Empreendedorismo:</strong>
-                <ul>
-                    <li>O empreendedorismo é essencial para a criação de empregos, inovação e crescimento econômico de um país.</li>
-                    <li>Empreendedores ajudam a desenvolver novas soluções para problemas antigos, criando impacto social e econômico.</li>
-                </ul>
-            </li>
-            <li><strong>Tendências do Empreendedorismo:</strong>
-                <ul>
-                    <li>O crescimento de negócios digitais e startups de tecnologia, como fintechs e e-commerces, está em alta.</li>
-                    <li>Há também uma forte tendência de empreendedorismo social, focado em causas sustentáveis e sociais.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section class="section">
-        <h2 class="time-slot">1:15 - 1:30 | Networking e Importância do Fracasso</h2>
-        <ul class="list">
-            <li><strong>Networking:</strong>
-                <ul>
-                    <li>Construir uma rede de contatos sólida é crucial para o sucesso de um empreendedor. Participar de eventos, conferências e até mesmo grupos em redes sociais pode expandir sua rede de influências.</li>
-                </ul>
-            </li>
-            <li><strong>Importância do Fracasso:</strong>
-                <ul>
-                    <li>O fracasso é parte do processo de aprendizagem no empreendedorismo. Muitos empreendedores bem-sucedidos enfrentaram falhas antes de alcançar o sucesso.</li>
-                    <li>Fracassar oferece lições valiosas e oportunidades para melhorar o modelo de negócios e estratégias.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section class="section">
-        <h2 class="time-slot">1:30 - 1:45 | Modelo de Negócios e Stakeholders</h2>
-        <ul class="list">
-            <li><strong>Modelo de Negócios:</strong>
-                <ul>
-                    <li>O modelo de negócios descreve a forma como a empresa cria, entrega e captura valor. Ele é fundamental para direcionar as estratégias e garantir o sucesso de um empreendimento.</li>
-                </ul>
-            </li>
-            <li><strong>Stakeholders:</strong>
-                <ul>
-                    <li>São todos os indivíduos ou grupos que têm interesse direto ou indireto no sucesso da empresa, como investidores, clientes, fornecedores e colaboradores.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section class="section">
-        <h2 class="time-slot">1:45 - 2:00 | Exercício Prático e Dúvidas</h2>
-        <ul class="list">
-            <li><strong>Exercício Prático:</strong>
-                <ul>
-                    <li>Os alunos deverão refletir sobre como as características de um empreendedor se aplicam ao seu perfil pessoal e desenvolver uma ideia de negócio, identificando stakeholders e definindo um modelo de negócios básico.</li>
-                </ul>
-            </li>
-            <li><strong>Dúvidas:</strong>
-                <ul>
-                    <li>Os alunos poderão esclarecer dúvidas sobre os conceitos discutidos durante a aula e como aplicá-los em suas ideias de negócios.</li>
+                    <li><a href="https://quizizz.com/admin/quiz/677be39236274ae84465ac15">Clique aqui!</a></li>
                 </ul>
             </li>
         </ul>
     </section>
 
 </body>
+
 </html>
