--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <h1 class="title">Cronograma de Aulas: Professor Lucas</h1>
+            <h1 class="title">Cronograma de Aulas iNext</h1>
             <p class="subtitle">Acesse os módulos e explore o conteúdo das aulas sobre Administração, Empreendedorismo, Informática.</p>
         </div>
     </header>
