atualizando aulas de rh

--- a/adm_empreendedorismo/03_rh/03/index.html
+++ b/adm_empreendedorismo/03_rh/03/index.html
@@ -30,11 +30,12 @@
                 </ul>
             </li>
         </ul>
+        <img src="../../../img/ferias.png" alt="">
     </section>
 
-    <!-- 0:20 - 0:40 | Demissão -->
+    <!-- 0:20 - 0:45 | Demissão -->
     <section class="section">
-        <h2 class="time-slot">0:20 - 0:40 | Demissão</h2>
+        <h2 class="time-slot">0:20 - 0:45 | Demissão</h2>
         <ul class="list">
             <li><strong>Demissão por Justa Causa:</strong>
                 <ul>
@@ -53,11 +54,12 @@
                 </ul>
             </li>
         </ul>
+        <img class="vertical" src="../../../img/rescisao.png" alt="">
     </section>
 
-    <!-- 0:40 - 1:00 | Advertência -->
+    <!-- 0:45 - 1:00 | Advertência -->
     <section class="section">
-        <h2 class="time-slot">0:40 - 1:00 | Advertência</h2>
+        <h2 class="time-slot">0:45 - 1:00 | Advertência</h2>
         <ul class="list">
             <li><strong>O que é a Advertência?</strong>
                 <ul>
@@ -71,6 +73,7 @@
                 </ul>
             </li>
         </ul>
+        <img class="vertical" src="../../../img/advertencia.png" alt="">
     </section>
 
     <!-- 1:00 - 1:20 | Contrato de Experiência -->
@@ -89,9 +92,13 @@
                 </ul>
             </li>
         </ul>
+        <div class="cropped-vert">
+        <img class="vertical" src="../../../img/experiencia.png" alt="">
+
+        </div>
     </section>
 
-    <!-- 1:20 - 1:40 | Vale Transporte (VT) e Salário Família -->
+    <!-- 1:20 - 1:35 | Vale Transporte (VT) e Salário Família -->
     <section class="section">
         <h2 class="time-slot">1:20 - 1:40 | Vale Transporte (VT) e Salário Família</h2>
         <ul class="list">
@@ -108,9 +115,10 @@
                 </ul>
             </li>
         </ul>
+        <img class="vertical" src="../../../img/salario-familia.png" alt="">
     </section>
 
-    <!-- 1:40 - 2:00 | Holerite e Folha de Ponto -->
+    <!-- 1:35 - 2:00 | Holerite e Folha de Ponto -->
     <section class="section">
         <h2 class="time-slot">1:40 - 2:00 | Holerite e Folha de Ponto</h2>
         <ul class="list">
@@ -127,6 +135,7 @@
                 </ul>
             </li>
         </ul>
+        <img src="../../../img/holerite.png" alt="">
     </section>
 
 </body>
