--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronograma de Aulas - Prof Lucas</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./home.css">
     <link rel="icon" type="image/png" href="./img/inextlogo.png">
 </head>
 <body>
@@ -16,13 +16,14 @@
     </header>
 
     <section class="section">
-        <h2 class="time-slot">I - Administração</h2>
+        <div class="card">
+            <h2 class="time-slot">I - Administração</h2>
         <p>Este módulo contém 10 aulas sobre conceitos e práticas essenciais da administração de empresas.</p>
         <ul class="list">
             <li><a href="adm_empreendedorismo/01_adm/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução à Administração</a></li>
             <li><a href="adm_empreendedorismo/01_adm/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Teoria Geral da Administração e Perfil do Administrador</a></li>
             <li><a href="adm_empreendedorismo/01_adm/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Cultura Organizacional, Missão, Visão e Valores</a></li>
-            <li><a href="adm_empreendedorismo/01_adm/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Ambiente Organizacional, Clima Organizacional e Pesquisa</a></li>
+            <li><a href="adm_empreendedorismo/01_adm/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Ambiente e Clima Organizacional</a></li>
             <li><a href="adm_empreendedorismo/01_adm/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Análise da Pesquisa e Tributos</a></li>
             <li><a href="adm_empreendedorismo/01_adm/06/index.html" class="link"><strong class="subtitle aula">Aula 6: </strong>Noções de Contabilidade</a></li>
             <li><a href="adm_empreendedorismo/01_adm/07/index.html" class="link"><strong class="subtitle aula">Aula 7: </strong>Exercícios de Contabilidade</a></li>
@@ -30,10 +31,12 @@
             <li><a href="adm_empreendedorismo/01_adm/09/index.html" class="link"><strong class="subtitle aula">Aula 9: </strong>Cheques e Preenchimento de Documentos</a></li>
             <li><a href="adm_empreendedorismo/01_adm/10/index.html" class="link"><strong class="subtitle aula">Aula 10:</strong> Revisão de Módulo</a></li>
         </ul>
+        </div>
     </section>
 
     <section class="section">
-        <h2 class="time-slot">II - Empreendedorismo</h2>
+        <div class="card">
+            <h2 class="time-slot">II - Empreendedorismo</h2>
         <p>Este módulo contém 10 aulas sobre o mundo do empreendedorismo e como planejar e administrar um negócio próprio.</p>
         <ul class="list">
             <li><a href="adm_empreendedorismo/02_empreendedorismo/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>O que é Empreendedorismo?</a></li>
@@ -47,10 +50,12 @@
             <li><a href="adm_empreendedorismo/02_empreendedorismo/09/index.html" class="link"><strong class="subtitle aula">Aula 9: </strong>Produção e Qualidade</a></li>
             <li><a href="adm_empreendedorismo/02_empreendedorismo/10/index.html" class="link"><strong class="subtitle aula">Aula 10:</strong> Revisão de Módulo</a></li>
         </ul>
+        </div>
     </section>
 
     <section class="section">
-        <h2 class="time-slot">III - RH e Leis Trabalhistas</h2>
+        <div class="card">
+            <h2 class="time-slot">III - RH e Leis Trabalhistas</h2>
         <p>Este módulo contém 10 aulas sobre gestão de recursos humanos e as leis trabalhistas que regem as relações de trabalho no Brasil.</p>
         <ul class="list">
             <li><a href="adm_empreendedorismo/03_rh/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução ao RH e Gestão de Pessoas</a></li>
@@ -64,10 +69,12 @@
             <li><a href="adm_empreendedorismo/03_rh/09/index.html" class="link"><strong class="subtitle aula">Aula 9: </strong>Cuidando das Pessoas e Melhorando o Ambiente</a></li>
             <li><a href="adm_empreendedorismo/03_rh/10/index.html" class="link"><strong class="subtitle aula">Aula 10:</strong> Revisão de Módulo</a></li>
         </ul>
+        </div>
     </section>
 
     <section class="section">
-        <h2 class="time-slot">0 - Integração de Informática</h2>
+        <div class="card">
+            <h2 class="time-slot">0 - Integração de Informática</h2>
         <p>Este módulo contém 7 aulas que cobrem conceitos e práticas essenciais de informática, incluindo introdução ao computador, sistemas operacionais e ferramentas básicas.</p>
         <ul class="list">
             <li><a href="informatica/00_integracao/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução ao Computador</a></li>
@@ -78,11 +85,13 @@
             <li><a href="informatica/00_integracao/06/index.html" class="link"><strong class="subtitle aula">Aula 6: </strong>Segurança e Manutenção do Computador</a></li>
             <li><a href="informatica/00_integracao/07/index.html" class="link"><strong class="subtitle aula">Aula 7: </strong>Revisão e Exercício Prático</a></li>
         </ul>
+        </div>
     </section>
     
 
     <section class="section">
-        <h2 class="time-slot">I - Windows</h2>
+        <div class="card">
+            <h2 class="time-slot">I - Windows</h2>
         <p>Este módulo contém 6 aulas sobre conceitos e práticas essenciais do computador e uso do Sistema Operacional Windows.</p>
         <ul class="list">
             <li><a href="informatica/01_windows/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução ao Windows</a></li>
@@ -92,20 +101,24 @@
             <li><a href="informatica/01_windows/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Proteção e Manutenção do Sistema</a></li>
             <li><a href="informatica/01_windows/06/index.html" class="link"><strong class="subtitle aula">Aula 6: </strong>Revisão e Prova Prática</a></li>
         </ul>
+        </div>
     </section>
 
     <section class="section">
-        <h2 class="time-slot">II - Internet</h2>
+        <div class="card">
+            <h2 class="time-slot">II - Internet</h2>
         <p>Este módulo contém 3 aulas sobre o uso da internet, incluindo navegação, pesquisa e segurança online.</p>
         <ul class="list">
             <li><a href="informatica/02_internet/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução à Internet e Navegadores</a></li>
             <li><a href="informatica/02_internet/02/index.html" class="link"><strong class="subtitle aula">Aula 2: </strong>Pesquisa Avançada e Ferramentas Online</a></li>
             <li><a href="informatica/02_internet/03/index.html" class="link"><strong class="subtitle aula">Aula 3: </strong>Segurança Online e Privacidade</a></li>
         </ul>
+        </div>
     </section>
 
     <section class="section">
-        <h2 class="time-slot">III - PowerPoint</h2>
+        <div class="card">
+            <h2 class="time-slot">III - PowerPoint</h2>
         <p>Este módulo contém 7 aulas sobre como utilizar o PowerPoint, desde a criação de slides até técnicas avançadas de apresentação e desenvolvimento de projeto</p>
         <ul class="list">
             <li><a href="informatica/03_ppt/01/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Introdução ao PowerPoint</a></li>
@@ -114,11 +127,13 @@
             <li><a href="informatica/03_ppt/04/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Animações e Transições de Slides</a></li>
             <li><a href="informatica/03_ppt/05/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Layouts e Design de Slides</a></li>
         </ul>
+        </div>
     </section>
     
 
     <section class="section">
-        <h2 class="time-slot">IV - Edição de Vídeo</h2>
+        <div class="card">
+            <h2 class="time-slot">IV - Edição de Vídeo</h2>
         <p>Este módulo contém 5 aulas sobre conceitos e prática de edição de vídeo com Filmora Wondershare.</p>
         <ul class="list">
             <li><a href="informatica/04_edicao/1/index.html" class="link"><strong class="subtitle aula">Aula 1: </strong>Criação e Roteiro de Vídeos</a></li>
@@ -127,10 +142,11 @@
             <li><a href="informatica/04_edicao/4/index.html" class="link"><strong class="subtitle aula">Aula 4: </strong>Legendas e Início do Projeto</a></li>
             <li><a href="informatica/04_edicao/5/index.html" class="link"><strong class="subtitle aula">Aula 5: </strong>Conclusão e Feedback</a></li>
         </ul>
+        </div>
     </section>
 
     <footer class="footer">
-        <p>&copy; 2024 Cronograma de Aulas - Prof. Lucas Morais</p>
+        <p>&copy; 2025 Cronograma de Aulas - Prof. Lucas Morais</p>
     </footer>
 
 </body>
