--- a/adm_empreendedorismo/02_empreendedorismo/08/index.html
+++ b/adm_empreendedorismo/02_empreendedorismo/08/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronograma - Matriz SWOT, Matriz BCG e Estudo de Caso</title>
     <link rel="stylesheet" href="../../../style.css">
+    <link rel="icon" type="image/png" href="../../../img/logomarca.png">
 </head>
 
 <body class="body">
