--- a/adm_empreendedorismo/03_rh/01/index.html
+++ b/adm_empreendedorismo/03_rh/01/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>História da Administração Científica, Clássica e Teoria das Relações Humanas</title>
     <link rel="stylesheet" href="../../../style.css">
+    <link rel="icon" type="image/png" href="../../../img/logomarca.png">
 </head>
 
 <body class="body">
