--- a/informatica/07_photoshop/04/index.html
+++ b/informatica/07_photoshop/04/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronograma - Camadas e Seleção no Photoshop</title>
     <link rel="stylesheet" href="../../style.css">
+    <link rel="icon" type="image/png" href="../../../img/logomarca.png">
 </head>
 <body class="body">
     <header class="header">
