alterando fonte da pagina

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <header class="header">
             <div class="header-content">
                 <h1 class="title">Cronograma de Aulas iNext</h1>
-                <p class="subtitle">Acesse os módulos e explore o conteúdo das aulas sobre Administração, Empreendedorismo,
-                    Informática.</p>
+                <p class="subtitle">Acesse os módulos e explore o conteúdo das aulas de cursos <strong><em>Administração</em></strong> e <strong><em>Informática</em></strong>.</p>
             </div>
         </header>
     
