alterando fonte da homepage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Administração
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <ol class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" href="#" onclick="toggleSection('administracao')">Administração</a></li>
                     <li><a class="dropdown-item" href="#" onclick="toggleSection('empreendedorismo')">Empreendedorismo</a></li>
                     <li><a class="dropdown-item" href="#" onclick="toggleSection('leis-trabalhistas')">RH e Leis Trabalhistas</a></li>
@@ -34,7 +34,7 @@
                     <li><a class="dropdown-item" href="#" onclick="toggleSection('comunicacao')">Comunicação Corporativa</a></li>
                     <li><a class="dropdown-item" href="#" onclick="toggleSection('marketing')">Marketing</a></li>
                     <li><a class="dropdown-item" href="#" onclick="toggleSection('matematica')">Matemática Financeira</a></li>
-                </ul>
+                </ol>
             </div>
         </div>
     
